--- a/src/app/pages/payrollprocess/overview/overview.html
+++ b/src/app/pages/payrollprocess/overview/overview.html
@@ -113,11 +113,11 @@
                 <div class="pre-payroll-actions">
                     <div class="row">
                         <div class="col-sm-4" style="top:-10px">
-                            <div class="alert alert-info clearfix" ui-sref="team.leave" data-ng-click="CheckLeaveAndAttendanceStatus();">
+                            <div class="alert alert-info clearfix" data-ng-click="CheckLeaveAndAttendanceStatus()">
                                 <div class="col-sm-1 alert-icon clear-side-padding">
                                     <span class="icon-file-check"></span>
                                 </div>
-                                <div ui-sref="team.leave" ng-click="CheckLeaveAndAttendanceStatus()" class="action col-sm-10 text-content clear-side-padding">
+                                <div data-ng-click="CheckLeaveAndAttendanceStatus()" class="action col-sm-10 text-content clear-side-padding">
                                     <h4>Leave</h4>
                                     <!-- ngIf: !vm.currentcycle.details.actions.leavesAndAttendance.isReviewed() -->
                                     <p class="clear-vertical-margin ">No action taken</p>
