--- a/src/app/pages/configuration/company/legal/legal.html
+++ b/src/app/pages/configuration/company/legal/legal.html
@@ -219,18 +219,27 @@
                                                             <div class="row">
                                                                 <div class="col-sm-3">
                                                                     <label>Country</label>
-                                                                    <select class="form-control" data- ng-model="entity.company.CountryId" ng-options="location.value as location.name for location in pageInfo.selects.CountryId"></select>
-                                                                    <!-- <input type="text" data-ng-model="" class="form-control" /> -->
+                                                                    <select id="inputDepartment" ng-model="entity.company.CountryId" ng-change="countryOnChange(entity.company.CountryId)" class="form-control"
+                                                                        ng-options="loaction.value as loaction.name for loaction in pageInfo.selects.CountryId"
+                                                                        data-placeholder="Select Nav Menu" required>
+                                                                        <option></option>
+                                                                    </select>
                                                                 </div>
                                                                 <div class="col-sm-3">
                                                                     <label>State</label>
-                                                                    <select class="form-control" data- ng-model="entity.company.StateId" ng-options="location.value as location.name for location in pageInfo.selects.StateId"></select>
-                                                                    <!-- <input type="text" data-ng-model="" class="form-control" /> -->
+                                                                    <select id="inputDesignation" ng-model="entity.company.StateId" ng-change="stateOnChange(entity.company.StateId)" class="form-control"
+                                                                        ng-options="branch.value as branch.name for branch in stateList"
+                                                                        data-placeholder="Select Nav Menu" required>
+                                                                        <option></option>
+                                                                    </select>
                                                                 </div>
                                                                 <div class="col-sm-3">
                                                                     <label>City</label>
-                                                                    <select class="form-control" data- ng-model="entity.company.CCOCityId" ng-options="location.value as location.name for location in pageInfo.selects.CCOCityId"></select>
-                                                                    <!-- <input type="text" data-ng-model="entity.company.CCOCityId" class="form-control" /> -->
+                                                                    <!-- <select class="form-control" data- ng-model="entity.company.CCOCityId" ng-options="location.value as location.name for location in pageInfo.selects.CCOCityId"></select> -->
+                                                                    <select id="inputEmployeeType" ng-model="entity.company.CCOCityId" class="form-control" ng-options="subUnit.value as subUnit.name for subUnit in cityList"
+                                                                        data-placeholder="Select Nav Menu" required>
+                                                                        <option></option>
+                                                                    </select>
                                                                 </div>
                                                                 <div class="col-sm-4">
                                                                     <label>PinCode</label>
