--- a/src/app/pages/configuration/employees/bankbranch/edit-bankbranch.html
+++ b/src/app/pages/configuration/employees/bankbranch/edit-bankbranch.html
@@ -21,13 +21,20 @@
                             <div class="col-sm-4 clear-side-padding">
                                 <div class="form-group">
                                     <label>Country</label>
-                                    <select class="form-control" data- ng-model="entity.CountryId" ng-options="location.value as location.name for location in selects.CountryId"></select>
+                                    <select id="inputDepartment" ng-model="entity.CountryId" ng-change="countryOnChange(entity.CountryId)" class="form-control"
+                                        ng-options="loaction.value as loaction.name for loaction in selects.CountryId" data-placeholder="Select Nav Menu"
+                                        required>
+                                        <option></option>
+                                    </select>
                                 </div>
                             </div>
                             <div class="col-sm-4 clear-right-padding">
                                 <div class="form-group">
                                     <label>State</label>
-                                    <select class="form-control" data- ng-model="entity.StateId" ng-options="location.value as location.name for location in selects.StateId"></select>
+                                    <select id="inputDesignation" ng-model="entity.StateId" ng-change="stateOnChange(entity.StateId)" class="form-control" ng-options="branch.value as branch.name for branch in stateList"
+                                        data-placeholder="Select Nav Menu" required>
+                                        <option></option>
+                                    </select>
                                 </div>
                             </div>
                         </div>
@@ -36,13 +43,20 @@
                             <div class="col-sm-4 clear-left-padding">
                                 <div class="form-group">
                                     <label>City</label>
-                                    <select class="form-control" data- ng-model="entity.CityId" ng-options="location.value as location.name for location in selects.CityId"></select>
+                                    <select id="inputEmployeeType" ng-model="entity.CityId" class="form-control" ng-change="cityOnChange(entity.CityId)" ng-options="subUnit.value as subUnit.name for subUnit in cityList"
+                                        data-placeholder="Select Nav Menu" required>
+                                        <option></option>
+                                    </select>
                                 </div>
                             </div>
                             <div class="col-sm-4 clear-side-padding">
                                 <div class="form-group">
                                     <label>Area</label>
-                                    <select class="form-control" data- ng-model="entity.BranchAreaId" ng-options="location.value as location.name for location in selects.BranchAreaId"></select>
+                                    <select id="inputEmployeeType" ng-model="entity.BranchAreaId" class="form-control" ng-options="subUnit.value as subUnit.name for subUnit in areaList"
+                                        data-placeholder="Select Nav Menu" required>
+                                        <option></option>
+                                    </select>
+                                    <!-- <select class="form-control" data- ng-model="entity.BranchAreaId" ng-options="location.value as location.name for location in selects.BranchAreaId"></select> -->
                                 </div>
                             </div>
                             <div class="col-sm-4 clear-right-padding">
@@ -107,8 +121,8 @@
                             <div class="col-sm-4 clear-right-padding">
                                 <div class="form-group">
                                     <label>Fax Number</label>
-                                    <input type="text" class="form-control" data-ng-model="entity.BranchFaxNo" name="BranchFaxNumber" id="BranchFaxNumber"
-                                        required />
+                                    <input type="text" class="form-control" data-ng-model="entity.BranchFaxNo" name="BranchFaxNumber" id="BranchFaxNumber" required
+                                    />
                                     <span class="validation-msg" data-validation-messages="" data-model-controller="addSignatoryForm.signatoryName" data-required-error="Name is required"
                                         data-form-submit="addSignatoryForm.$submitted"></span>
                                 </div>
