--- a/src/app/pages/configuration/leaveholiday/holidayconfbylocation/edit-holidayconfbylocation.html
+++ b/src/app/pages/configuration/leaveholiday/holidayconfbylocation/edit-holidayconfbylocation.html
@@ -11,8 +11,7 @@
                     <div class="col-sm-8">
                         <div class="form-group">
                             <label dotranslate>Holiday</label>
-                            <select class="form-control" name="HDCBLHDId" ng-options="opt.value as opt.name for opt in selects.HDCBLHDId" 
-                                ng-model="entity.HDCBLHDId"></select>
+                            <select class="form-control" name="HDCBLHDId" ng-options="opt.value as opt.name for opt in selects.HDCBLHDId" ng-model="entity.HDCBLHDId"></select>
                         </div>
                     </div>
                 </div>
@@ -20,8 +19,11 @@
                     <div class="col-sm-8">
                         <div class="form-group">
                             <label dotranslate>Location</label>
-                            <select class="form-control" name="LocationId" ng-options="opt.value as opt.name for opt in selects.LocationId" 
-                                ng-model="entity.LocationId"></select>
+                            <select id="inputDepartment" ng-model="entity.LocationId" ng-change="locationOnChange(entity.LocationId)" class="form-control"
+                                ng-options="loaction.value as loaction.name for loaction in selects.LocationId" data-placeholder="Select Nav Menu"
+                                required>
+                                <option></option>
+                            </select>
                         </div>
                     </div>
                 </div>
@@ -29,11 +31,10 @@
                     <div class="col-sm-8">
                         <div class="form-group">
                             <label dotranslate>Branch</label>
-                            <!-- <select class="form-control" id="country" ng-model="countrySrc" ng-options="opt.value as opt.name for opt in selects.CountryId" ng-change="GetSelectedCountry()">
-                                <option value=''>Select</option>
-                            </select> -->
-                            <select class="form-control" name="BRId" ng-options="opt.value as opt.name for opt in selects.BRId" ng-model="entity.BRId"></select>
-                            <!-- ng-change="changeState()" -->
+                            <select id="inputDesignation" ng-model="entity.BRId" ng-change="branchOnChange(entity.BRId)" class="form-control" ng-options="branch.value as branch.name for branch in branchList"
+                                data-placeholder="Select Nav Menu" required>
+                                <option></option>
+                            </select>
                         </div>
                     </div>
                 </div>
@@ -41,10 +42,11 @@
                     <div class="col-sm-8">
                         <div class="form-group">
                             <label dotranslate>Sub-Unit</label>
-                            <!-- <select class="form-control" id="state" ng-disabled="!countrySrc" ng-model="stateSrc" ng-options="opt.value as opt.name for opt in countrySrc" ng-change="GetSelectedState()">
-                                <option value=''>Select</option>
-                            </select> -->
-                            <select class="form-control" name="HDCBLSubUnitId" ng-options="opt.value as opt.name for opt in selects.HDCBLSubUnitId" ng-model="entity.HDCBLSubUnitId"></select>
+                            <select id="inputEmployeeType" ng-model="entity.HDCBLSubUnitId" class="form-control"  ng-options="subUnit.value as subUnit.name for subUnit in subUnitList"
+                                data-placeholder="Select Nav Menu" required>
+                                <option></option>
+                            </select>
+                            <!-- <select class="form-control" name="HDCBLSubUnitId" ng-options="opt.value as opt.name for opt in selects.HDCBLSubUnitId" ng-model="entity.HDCBLSubUnitId"></select> -->
                         </div>
                     </div>
                 </div>
