--- a/src/app/pages/directory/empdirectory/empdirectory.html
+++ b/src/app/pages/directory/empdirectory/empdirectory.html
@@ -41,7 +41,8 @@
                             </div>
                         </div>
                     </div>
-                    <div ng-if="employeeList.length=0" class="alert alert-success" role="alert">Hooray, no employee list found!</div>
+                        
+                    <div ng-show="isNoDataFound" class="alert alert-success" role="alert">Hooray, no employee list found!</div>
 
                 </div>
             </div>
