--- a/src/app/common/components/childNav/childNav.html
+++ b/src/app/common/components/childNav/childNav.html
@@ -2,7 +2,7 @@
     <div class="child-page-navigation">
         <ul>
             <li ng-repeat="state in subLocalState" data-ui-sref-active="active" class="active">
-                <a class="anchor-sm" data-ui-sref="{{state.stateRef}}" href>{{state.title}}</a>
+                <a class="anchor-sm" data-ui-sref="{{state.stateRef}}">{{state.title}}</a>
             </li>
         </ul>
     </div>
