--- a/src/app/pages/finances/loans/loans.html
+++ b/src/app/pages/finances/loans/loans.html
@@ -24,8 +24,9 @@
             <div class="loan-action col-sm-4 clear-right-padding">
                 <div class="content-container col-sm-12">
                     <div class="col-sm-6 clear-side-padding">
-                        <a href class="action-link" ng-click="applyLoan()">Apply Loan</a>
-
+                        <a href class="action-link" ng-click="newloan()">Apply Loan</a>
+                        <!-- ng-click="newloan()" -->
+                        <!-- data-ui-sref="finances.loans.newloan" -->
                     </div>
                     <!-- <div class="col-sm-6 clear-side-padding text-right">
                         <a class="action-link" ui-sref="payrolloverview.loans.import" href="#/payroll/overview/loans/import">Import loans</a>
