--- a/src/app/pages/finances/loans/requests/requests.html
+++ b/src/app/pages/finances/loans/requests/requests.html
@@ -1,7 +1,7 @@
 <div class="col-lg-12 clear-side-padding">
     <div class="panel">
         <div class="panel-body">
-            <div ui-grid="gridOptions" class="">
+            <div ui-grid="gridOptions" ui-grid-pagination class="djGrid payband">
             </div>
         </div>
     </div>
