--- a/src/app/pages/finances/loans/outstanding/outstanding.html
+++ b/src/app/pages/finances/loans/outstanding/outstanding.html
@@ -1,8 +1,11 @@
 <div class="col-lg-12 clear-side-padding">
     <div class="panel">
         <div class="panel-body">
-            <div ui-grid="gridOptions" class="">
+            <div ui-grid="gridOptions" ui-grid-pagination class="djGrid payband">
             </div>
         </div>
     </div>
 </div>
+
+<!-- <div ui-grid="gridOptions" ui-grid-pagination class="djGrid payband">
+</div> -->
