--- a/src/app/pages/team/leave/leave/leave.html
+++ b/src/app/pages/team/leave/leave/leave.html
@@ -1,6 +1,4 @@
-<div  style="background-color: #f5f5f5">
-    <button style="margin: 2px 22px;" class="btn btn-primary pull-right">Save & Continue</button>
-    <br>
+<div>
     <br>
 </div>
 <child-nav menu="'team.leave.leave'"></child-nav>
